test/files/neg/i20006b.check
i20006b.scala:9: error: method next is defined twice;
  the conflicting value next was defined at line 7:7
  override def next(): T = { // error
               ^
i20006b.scala:8: error: method hasNext is defined twice;
  the conflicting value hasNext was defined at line 6:7
  override def hasNext: Boolean = first || hasNext(acc) // error
               ^
i20006b.scala:48: error: x is already defined as value x
  val x: String = "member" // error
      ^
i20006b.scala:54: error: x is already defined as value x
  private[this] var x: Int = 42 // error
                    ^
i20006b.scala:68: error: method x is defined twice;
  the conflicting method x was defined at line 67:21
  def x(): Int = 42 // error
      ^
i20006b.scala:78: error: x is already defined as variable x
    def x(): Int = x // error
        ^
i20006b.scala:23: error: Double definition will be detected in Scala 3; the conflicting value next is defined at 19:65
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=YIterateIterator
  override def next(): T = { // werror
               ^
i20006b.scala:22: error: Double definition will be detected in Scala 3; the conflicting value hasNext is defined at 19:42
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=YIterateIterator
  override def hasNext: Boolean = first || hasNext(acc) // error
               ^
i20006b.scala:37: error: Double definition will be detected in Scala 3; the conflicting value next is defined at 33:65
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=ZIterateIterator
  def next(): T = { // werror
      ^
i20006b.scala:36: error: Double definition will be detected in Scala 3; the conflicting value hasNext is defined at 33:42
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=ZIterateIterator
  def hasNext: Boolean = first || hasNext(acc) // error
      ^
i20006b.scala:51: error: Double definition will be detected in Scala 3; the conflicting value x is defined at 50:9
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=D
  private var x: Int = 42 // error
              ^
i20006b.scala:57: error: Double definition will be detected in Scala 3; the conflicting value x is defined at 56:9
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=F
  def x(): Int = 42 // werror
      ^
i20006b.scala:64: error: Double definition will be detected in Scala 3; the conflicting value x is defined at 63:21
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=H
  def x(): Int = 42 // werror
      ^
i20006b.scala:72: error: Double definition will be detected in Scala 3; the conflicting variable x is defined at 71:21
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=PrivateConflict
  def x(): Int = x // werror
      ^
14 errors
